--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Periodic Table</title>
     <link rel="stylesheet" href="table.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
