--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Periodic Table</title>
+    <title>Periodic Table of Elements</title>
     <link rel="stylesheet" href="table.css">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
@@ -190,7 +190,6 @@
         for (i = 0; i < tds.length; i++) {
             tds[i].style.height = `${tds[i].style.width}`
         }
-        document.URL = ".l"
     </script> -->
 </body>
 
